--- a/Prefs/Resources/Root.plist
+++ b/Prefs/Resources/Root.plist
@@ -26,7 +26,7 @@
             <key>cell</key>
             <string>PSLinkCell</string>
             <key>label</key>
-            <string>CC Media Player (not yet)</string>
+            <string>CC Media Player</string>
             <key>detail</key>
             <string>VDESubListController</string>
             <key>VDESub</key>
@@ -38,14 +38,6 @@
             <string>PSGroupCell</string>
             <key>label</key>
             <string>Other</string>
-        </dict>
-        <dict>
-            <key>cell</key>
-            <string>PSButtonCell</string>
-            <key>label</key>
-            <string>Restart mediaserverd</string>
-            <key>action</key>
-            <string>restartmsd:</string>
         </dict>
         <dict>
             <key>cellClass</key>
