--- a/control
+++ b/control
@@ -3,7 +3,7 @@ Name: Vide
 Version: 0.0.1
 Architecture: iphoneos-arm
 Description: An awesome MobileSubstrate tweak!
-Maintainer: Diego Barría
-Author: Diego Barría
+Maintainer: Xyaman
+Author: Xyaman
 Section: Tweaks
 Depends: mobilesubstrate, preferenceloader, ws.hbang.common (>= 1.17), com.mrgcgamer.libgcuniversal
