--- a/Prefs/Resources/CCMediaPlayer.plist
+++ b/Prefs/Resources/CCMediaPlayer.plist
@@ -7,6 +7,68 @@
         <dict>
             <key>cell</key>
             <string>PSGroupCell</string>
+        </dict>
+        <dict>
+            <key>cell</key>
+            <string>PSSwitchCell</string>
+            <key>default</key>
+            <false/>
+            <key>label</key>
+            <string>Use swipe gestures</string>
+            <key>key</key>
+            <string>CCUseSwipeGestures</string>
+            <key>defaults</key>
+            <string>com.xyaman.videpreferences</string> 
+        </dict>  
+
+        <!-- Hide options -->
+        <dict>
+            <key>cell</key>
+            <string>PSGroupCell</string>
+            <key>label</key>
+            <string>Hiding</string>
+        </dict>
+        <dict>
+            <key>cell</key>
+            <string>PSSwitchCell</string>
+            <key>default</key>
+            <false/>
+            <key>label</key>
+            <string>Hide time slider</string>
+            <key>key</key>
+            <string>CCHideTime</string>
+            <key>defaults</key>
+            <string>com.xyaman.videpreferences</string> 
+        </dict> 
+        <dict>
+            <key>cell</key>
+            <string>PSSwitchCell</string>
+            <key>default</key>
+            <false/>
+            <key>label</key>
+            <string>Hide controls</string>
+            <key>key</key>
+            <string>CCHideControls</string>
+            <key>defaults</key>
+            <string>com.xyaman.videpreferences</string> 
+        </dict> 
+        <dict>
+            <key>cell</key>
+            <string>PSSwitchCell</string>
+            <key>default</key>
+            <false/>
+            <key>label</key>
+            <string>Hide volume slider</string>
+            <key>key</key>
+            <string>CCHideVolume</string>
+            <key>defaults</key>
+            <string>com.xyaman.videpreferences</string> 
+        </dict> 
+
+        <!-- Custom tint -->
+        <dict>
+            <key>cell</key>
+            <string>PSGroupCell</string>
             <key>label</key>
             <string>Custom tint color</string>
         </dict>
