--- a/Tweak/Makefile
+++ b/Tweak/Makefile
@@ -2,7 +2,7 @@ TWEAK_NAME = Vide
 
 $(TWEAK_NAME)_FILES = Tweak.x
 $(TWEAK_NAME)_CFLAGS = -DTHEOS_LEAN_AND_MEAN -fobjc-arc
-$(TWEAK_NAME)_LIBRARIES = gcuniversal
+$(TWEAK_NAME)_LIBRARIES = gcuniversal kuro
 $(TWEAK_NAME)_FRAMEWORKS = UIKit
 $(TWEAK_NAME)_PRIVATE_FRAMEWORKS = MediaRemote
 $(TWEAK_NAME)_EXTRA_FRAMEWORKS = Cephei
