--- a/control
+++ b/control
@@ -6,4 +6,4 @@ Description: An awesome MobileSubstrate tweak!
 Maintainer: Xyaman
 Author: Xyaman
 Section: Tweaks
-Depends: mobilesubstrate, preferenceloader, ws.hbang.common (>= 1.17), com.mrgcgamer.libgcuniversal, com.xyaman.libkuro
+Depends: mobilesubstrate, preferenceloader, ws.hbang.common (>= 1.17), com.mrgcgamer.libgcuniversal, com.xyaman.libkuro, com.xyaman.libsona
