--- a/control
+++ b/control
@@ -2,8 +2,11 @@ Package: com.xyaman.vide
 Name: Vide
 Version: 0.0.1
 Architecture: iphoneos-arm
-Description: An awesome MobileSubstrate tweak!
+Description: Customize your Lockscreen and CC media player.
 Maintainer: Xyaman
 Author: Xyaman
 Section: Tweaks
 Depends: mobilesubstrate, preferenceloader, ws.hbang.common (>= 1.17), com.mrgcgamer.libgcuniversal, com.xyaman.libkuro, com.xyaman.libsona
+Depiction: https://repo.xyaman.xyz/depictions/index.html?p=vide
+SileoDepiction: https://repo.xyaman.xyz/depictions/vide/depiction.json
+Icon: https://repo.xyaman.xyz/depictions/vide/assets/icon.png
